limpieza de cola al despachar iconos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
   <button (click)="showIconsComponents()">Show Icons</button>
   &nbsp;
   <button (click)="loadAllCollections()">Load All Icons</button>
+  &nbsp;
+  <button (click)="showDispatchQueue()">Check Icons Request Queue (in console)</button>
 </div>
 
 <ng-container *ngIf="showCollections">
