añadido decorador para desuscribir observables al destruir componente

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div>
-  <button (click)="showIconsComponents()">Show Icons</button>
+<div class="buttons-list">
+  <button (click)="showIconsComponents()">{{ btnShowIconsText }}</button>
   &nbsp;
   <button (click)="loadAllCollections()">Load All Icons</button>
   &nbsp;
